--- a/index.html
+++ b/index.html
@@ -104,49 +104,82 @@
         </div>
       </div>
     </section>
-    <section>
-      <h2>Stay productive, wherever you are</h2>
 
-      <p>
-        Never let location be an issue when accessing your files. Fylo has you
-        covered for all of your file storage needs.
-      </p>
+    <section class="productive">
+      <div class="inner-productive">
+        <div class="column-1">
+          <img src="/images/illustration-stay-productive.png" alt="" />
+        </div>
+        <div class="column-2">
+          <div class="column-2-content">
+            <h2>Stay productive, wherever you are</h2>
 
-      <p>
-        Securely share files and folders with friends, family and colleagues for
-        live collaboration. No email attachments required.
-      </p>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
 
-      <a>See how Fylo works</a>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
+
+            <a>See how Fylo works</a>
+            <img class="arrow" src="/images/icon-arrow.svg" alt="arrow" />
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <p>
-        Fylo has improved our team productivity by an order of magnitude. Since
-        making the switch our team has become a well-oiled collaboration
-        machine.
-      </p>
+    <section class="testimonials">
+      <div class="inner-testimonials">
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="lower-testimonial">
+            <img src="/images/profile-1.jpg" alt="satish" />
+            <div class="profile-info">
+              <h4>Satish Patel</h4>
+              <h5>Founder & CEO, Huddle</h5>
+            </div>
+          </div>
+        </div>
 
-      <h4>Satish Patel</h4>
-      <h5>Founder & CEO, Huddle</h5>
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
 
-      <p>
-        Fylo has improved our team productivity by an order of magnitude. Since
-        making the switch our team has become a well-oiled collaboration
-        machine.
-      </p>
+          <div class="lower-testimonial">
+            <img src="/images/profile-2.jpg" alt="Bruce" />
+            <div class="profile-info">
+              <h4>Bruce McKenzie</h4>
+              <h5>Founder & CEO, Huddle</h5>
+            </div>
+          </div>
+        </div>
 
-      <h4>Bruce McKenzie</h4>
-      <h5>Founder & CEO, Huddle</h5>
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
 
-      <p>
-        Fylo has improved our team productivity by an order of magnitude. Since
-        making the switch our team has become a well-oiled collaboration
-        machine.
-      </p>
-
-      <h4>Iva Boyd</h4>
-      <h5>Founder & CEO, Huddle</h5>
+          <div class="lower-testimonial">
+            <img src="/images/profile-3.jpg" alt="iva" />
+            <div class="profile-info">
+              <h4>Iva Boyd</h4>
+              <h5>Founder & CEO, Huddle</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <div>
