--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
+    <script
+      src="https://kit.fontawesome.com/4289e2d83f.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
@@ -132,92 +136,130 @@
     </section>
 
     <section class="testimonials">
-      <div class="inner-testimonials">
-        <div class="testimonial">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="lower-testimonial">
-            <img src="/images/profile-1.jpg" alt="satish" />
-            <div class="profile-info">
-              <h4>Satish Patel</h4>
-              <h5>Founder & CEO, Huddle</h5>
+      <div class="testimonials-body">
+        <div class="inner-testimonials">
+          <img class="bg-quotes" src="/images/bg-quotes.png" />
+          <div class="testimonial">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="lower-testimonial">
+              <img src="/images/profile-1.jpg" alt="satish" />
+              <div class="profile-info">
+                <h4>Satish Patel</h4>
+                <h5>Founder & CEO, Huddle</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+
+            <div class="lower-testimonial">
+              <img src="/images/profile-2.jpg" alt="Bruce" />
+              <div class="profile-info">
+                <h4>Bruce McKenzie</h4>
+                <h5>Founder & CEO, Huddle</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+
+            <div class="lower-testimonial">
+              <img src="/images/profile-3.jpg" alt="iva" />
+              <div class="profile-info">
+                <h4>Iva Boyd</h4>
+                <h5>Founder & CEO, Huddle</h5>
+              </div>
             </div>
           </div>
         </div>
-
-        <div class="testimonial">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-
-          <div class="lower-testimonial">
-            <img src="/images/profile-2.jpg" alt="Bruce" />
-            <div class="profile-info">
-              <h4>Bruce McKenzie</h4>
-              <h5>Founder & CEO, Huddle</h5>
-            </div>
-          </div>
-        </div>
-
-        <div class="testimonial">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-
-          <div class="lower-testimonial">
-            <img src="/images/profile-3.jpg" alt="iva" />
-            <div class="profile-info">
-              <h4>Iva Boyd</h4>
-              <h5>Founder & CEO, Huddle</h5>
-            </div>
+      </div>
+      <div class="testimonials-call-to-action">
+        <div class="floating-call-to-action">
+          <div class="inner-call-to-action">
+            <h2>Get early access today</h2>
+            <p>
+              It only takes a minute to sign up and our free starter tier is
+              extremely generous. If you have any questions, our support team
+              would be happy to help you.
+            </p>
+            <form action="">
+              <input placeholder="email@example.com" />
+              <button>Get Started For Free</button>
+            </form>
           </div>
         </div>
       </div>
     </section>
 
-    <div>
-      Get early access today It only takes a minute to sign up and our free
-      starter tier is extremely generous. If you have any questions, our support
-      team would be happy to help you. Get Started For Free
-    </div>
-
     <footer>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua
-      </p>
+      <div class="inner-footer">
+        <div class="footer-row-1">
+          <img src="/images/logo.svg" alt="logo" />
+        </div>
+        <div class="footer-row-2">
+          <div class="footer-column-1">
+            <img src="/images/icon-location.svg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
 
-      <a>+1-543-123-4567</a>
-      <a>example@fylo.com</a>
+          <div class="footer-column-2">
+            <div class="contact-grid">
+              <img src="/images/icon-phone.svg" alt="" />
+              <a>+1-543-123-4567</a>
+              <img src="/images/icon-email.svg" alt="" />
+              <a>example@fylo.com</a>
+            </div>
+          </div>
 
-      <ul>
-        <li>About Us</li>
-        <li>Jobs</li>
-        <li>Press</li>
-        <li>Blog</li>
-      </ul>
+          <div class="footer-column-3">
+            <div class="column-3-links">
+              <ul>
+                <li>About Us</li>
+                <li>Jobs</li>
+                <li>Press</li>
+                <li>Blog</li>
+              </ul>
 
-      <ul>
-        <li>Contact Us</li>
-        <li>Terms</li>
-        <li>Privacy</li>
-      </ul>
-    </footer>
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
+              <ul>
+                <li>Contact Us</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-column-4">
+            <i
+              class="fa-brands fa-facebook"
+              style="color: #fff; font-size: 32px"
+            ></i>
+            <i
+              class="fa-brands fa-twitter"
+              style="color: #fff; font-size: 32px"
+            ></i>
+            <i
+              class="fa-brands fa-instagram"
+              style="color: #fff; font-size: 32px"
+            ></i>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
