--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="features security">
-          <img src="/images/icon-security.svg" alt="" />
+          <img src="./images/icon-security.svg" alt="" />
           <h3>Security you can trust</h3>
           <p>
             2-factor authentication and user-controlled encryption are just a
@@ -89,7 +89,7 @@
         </div>
 
         <div class="features collaboration">
-          <img src="/images/icon-collaboration.svg" alt="" />
+          <img src="./images/icon-collaboration.svg" alt="" />
           <h3>Real-time collaboration</h3>
           <p>
             Securely share files and folders with friends, family and colleagues
@@ -98,7 +98,7 @@
         </div>
 
         <div class="features any-file">
-          <img src="/images/icon-any-file.svg" alt="" />
+          <img src="./images/icon-any-file.svg" alt="" />
           <h3>Store any type of file</h3>
           <p>
             Whether you're sharing holidays photos or work documents, Fylo has
@@ -187,7 +187,7 @@
               collaboration machine.
             </p>
             <div class="lower-testimonial">
-              <img src="/images/profile-1.jpg" alt="satish" />
+              <img src="./images/profile-1.jpg" alt="satish" />
               <div class="profile-info">
                 <h4>Satish Patel</h4>
                 <h5>Founder & CEO, Huddle</h5>
@@ -203,7 +203,7 @@
             </p>
 
             <div class="lower-testimonial">
-              <img src="/images/profile-2.jpg" alt="Bruce" />
+              <img src="./images/profile-2.jpg" alt="Bruce" />
               <div class="profile-info">
                 <h4>Bruce McKenzie</h4>
                 <h5>Founder & CEO, Huddle</h5>
@@ -219,7 +219,7 @@
             </p>
 
             <div class="lower-testimonial">
-              <img src="/images/profile-3.jpg" alt="iva" />
+              <img src="./images/profile-3.jpg" alt="iva" />
               <div class="profile-info">
                 <h4>Iva Boyd</h4>
                 <h5>Founder & CEO, Huddle</h5>
@@ -249,11 +249,11 @@
     <footer>
       <div class="inner-footer">
         <div class="footer-row-1">
-          <img src="/images/logo.svg" alt="logo" />
+          <img src="./images/logo.svg" alt="logo" />
         </div>
         <div class="footer-row-2">
           <div class="footer-column-1">
-            <img src="/images/icon-location.svg" alt="" />
+            <img src="./images/icon-location.svg" alt="" />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
@@ -262,9 +262,9 @@
 
           <div class="footer-column-2">
             <div class="contact-grid">
-              <img src="/images/icon-phone.svg" alt="" />
+              <img src="./images/icon-phone.svg" alt="" />
               <a>+1-543-123-4567</a>
-              <img src="/images/icon-email.svg" alt="" />
+              <img src="./images/icon-email.svg" alt="" />
               <a>example@fylo.com</a>
             </div>
           </div>
