--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/4289e2d83f.js"
       crossorigin="anonymous"
@@ -237,9 +237,10 @@
               extremely generous. If you have any questions, our support team
               would be happy to help you.
             </p>
-            <form action="">
-              <input placeholder="email@example.com" />
-              <button>Get Started For Free</button>
+            <form>
+              <label for="email"></label>
+              <input id="email" placeholder="email@example.com" />
+              <button class="submit-form">Get Started For Free</button>
             </form>
           </div>
         </div>
