--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="productive">
       <div class="inner-productive">
         <div class="column-1">
-          <img src="/images/illustration-stay-productive.png" alt="" />
+          <img src="./images/illustration-stay-productive.png" alt="" />
         </div>
         <div class="column-2">
           <div class="column-2-content">
@@ -179,7 +179,7 @@
     <section class="testimonials">
       <div class="testimonials-body">
         <div class="inner-testimonials">
-          <img class="bg-quotes" src="/images/bg-quotes.png" />
+          <img class="bg-quotes" src="./images/bg-quotes.png" />
           <div class="testimonial">
             <p>
               Fylo has improved our team productivity by an order of magnitude.
@@ -303,5 +303,6 @@
         </div>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
