message email alert

--- a/index.html
+++ b/index.html
@@ -240,13 +240,11 @@
             <form id="main-form" action="/">
               <label for="email"></label>
               <input
-                type="email"
                 name="email_input"
                 id="email"
                 class="email-input"
                 value=""
                 placeholder="email@example.com"
-                required
               />
               <button
                 type="submit"
@@ -257,6 +255,7 @@
                 Get Started For Free
               </button>
             </form>
+            <p class="alert-msg"></p>
           </div>
         </div>
       </div>
